configure: package.json file

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "identity-service",
+  "name": "express-starter-template",
   "version": "1.0.0",
   "main": "src/server.js",
   "type": "module",
@@ -7,8 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node src/server.js",
     "dev": "nodemon src/server.js",
-    "prepare": "husky",
-    "lint": "eslint ."
+    "pre-commit": "lint-staged",
+    "lint": "eslint --fix ."
   },
   "keywords": [],
   "author": "",
