update env file

--- a/.env.example
+++ b/.env.example
@@ -3,9 +3,18 @@ MONGODB_URL=
 DB_NAME=
 LOGS_DB_NAME=
 
+SUPER_ADMIN_EMAIL=
+SUPER_ADMIN_PASSWORD=
+SUPER_ADMIN_FIRST_NAME=
+SUPER_ADMIN_LAST_NAME=
+
 JWT_SECRET=
+ACCESS_TOKEN_SECRET=
+ACCESS_TOKEN_EXPIRY=
+REFRESH_TOKEN_SECRET=
+REFRESH_TOKEN_EXPIRY=
 
 NODE_ENV=
 API_PREFIX=
 
-ALLOWED_ORIGINS=
+ALLOWED_ORIGINS="http://localhost:5173, http://localhost:5174"
