--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
     "pre-commit": "lint-staged",
     "lint": "eslint --fix ."
   },
+  "engines": {
+    "node": ">=20.0.0 <23.0.0",
+    "npm": ">=10.0.0"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
